Sync all content

--- a/content/resources/be450_0328.md
+++ b/content/resources/be450_0328.md
@@ -4,6 +4,8 @@ description: ''
 file: /courses/20-450-molecular-and-cellular-pathophysiology-be-450-spring-2005/d2d6ddbf1d27bc527d2fab3c44b06b26_be450_0328.pdf
 file_size: 1199099
 file_type: application/pdf
+hide_download: true
+hide_download_original: null
 learning_resource_types:
 - Assignments
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
