--- a/content/resources/20-450s05-th.md
+++ b/content/resources/20-450s05-th.md
@@ -4,6 +4,8 @@ description: New image Upload
 file: /courses/20-450-molecular-and-cellular-pathophysiology-be-450-spring-2005/33d7b8f61d7ffc039eaf6522bc47139c_20-450s05-th.jpg
 file_size: 9393
 file_type: image/jpeg
+hide_download: true
+hide_download_original: null
 image_metadata:
   caption: A comparison of the Hepatitis B, C, and D viruses. (Figure by MIT OpenCourseWare.)
   credit: ''
