--- a/content/resources/be450_0302.md
+++ b/content/resources/be450_0302.md
@@ -4,6 +4,8 @@ description: ''
 file: /courses/20-450-molecular-and-cellular-pathophysiology-be-450-spring-2005/9b10894621c8f6184aeb705aa71d7971_be450_0302.pdf
 file_size: 701809
 file_type: application/pdf
+hide_download: true
+hide_download_original: null
 learning_resource_types:
 - Assignments
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
